WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299139
ProcessSyncClient doesn't have enough context to broadcast FrameTreeSyncData changes.
https://bugs.webkit.org/show_bug.cgi?id=299139
Summary
ProcessSyncClient doesn't have enough context to broadcast FrameTreeSyncData ...
Matt Woodrow
Reported
2025-09-18 16:50:26 PDT
ProcessSyncClient just receives the changed value, but doesn't know which Frame it should be applied to in other processes.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-18 16:50:53 PDT
<
rdar://problem/160897245
>
Matt Woodrow
Comment 2
2025-09-18 17:05:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50966
EWS
Comment 3
2025-09-29 19:00:12 PDT
Committed
300728@main
(050cd7e231df): <
https://commits.webkit.org/300728@main
> Reviewed commits have been landed. Closing PR #50966 and removing active labels.
Ben Nham
Comment 4
2025-09-30 20:08:30 PDT
Reopened Bugzilla. Revert
300728@main
(caused 6% PLT Site Isolation regression), tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=299928
.
Matt Woodrow
Comment 5
2025-10-05 16:11:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51838
EWS
Comment 6
2025-10-07 17:46:27 PDT
Committed
301176@main
(3984e2df0458): <
https://commits.webkit.org/301176@main
> Reviewed commits have been landed. Closing PR #51838 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug