Source/WebKitLegacy/mac/WebView/WebView.mm
@@ -151,6 +151,7 @@
 #import <WebCore/Document.h>
 #import <WebCore/DocumentFullscreen.h>
 #import <WebCore/DocumentLoader.h>
+#import <WebCore/DocumentSyncClient.h>
 #import <WebCore/DocumentView.h>
 #import <WebCore/DragController.h>
 #import <WebCore/DragData.h>
@@ -211,7 +212,6 @@
 #import <WebCore/PlatformEventFactoryMac.h>
 #import <WebCore/PlatformScreen.h>
 #import <WebCore/PlatformTextAlternatives.h>
-#import <WebCore/ProcessSyncClient.h>
 #import <WebCore/ProgressTracker.h>
 #import <WebCore/Range.h>
 #import <WebCore/RemoteFrameClient.h>
@@ -1490,7 +1490,7 @@ static void WebKitInitializeGamepadProviderIfNecessary()
         makeUniqueRef<WebChromeClientIOS>(self),
 #endif
         makeUniqueRef<WebCryptoClient>(self),
-        makeUniqueRef<WebCore::ProcessSyncClient>()
+        makeUniqueRef<WebCore::DocumentSyncClient>()
 #if HAVE(DIGITAL_CREDENTIALS_UI)
         , WebCore::DummyCredentialRequestCoordinatorClient::create()
 #endif
@@ -1745,7 +1745,7 @@ static void WebKitInitializeGamepadProviderIfNecessary()
 #endif
         makeUniqueRef<WebChromeClientIOS>(self),
         makeUniqueRef<WebCryptoClient>(self),
-        makeUniqueRef<WebCore::ProcessSyncClient>()
+        makeUniqueRef<WebCore::DocumentSyncClient>()
 #if HAVE(DIGITAL_CREDENTIALS_UI)
         , WebCore::DummyCredentialRequestCoordinatorClient::create()
 #endif
